@@ -1,4 +1,5 @@
 {{$NEXT}}
+   - add handling of keyboards with automatic value translation
 
 0.004  2016-12-06 06:26:28 CET
    - use warnings everywhere
